@@ -1,3 +1,7 @@
+06/10/16 Julien Dutheil
+* bppSeqGen now takes Hudson's MS ARG files as input.
+* new input.tree.scale option to adjust branch lengths.
+
 22/05/16 Julien Dutheil
 * bpppopstats now computes codon statistics per site (e.g. PiN, PiS)
 * Added example for bpppopstats.
